2006-11-05  Björn Steinbrink  <B.Steinbrink@gmx.de

	* data/graphics/sprites/Makefile.am: Use tabs instead of spaces as
	required by automake (AFAIK).

2006-11-05  Philipp Sehmisch  <tmw@crushnet.org>

	* data/graphics/sprites/weapon0.png,
	data/graphics/sprites/weapon2.png,
	data/graphics/sprites/weapon-bow.xml,
	data/graphics/sprites/weapon-dagger.xml,
	data/graphics/sprites/weapon-fist.xml,
	data/graphics/sprites/weapon-scythe.xml,
	data/graphics/items/weapon-polearm-scythe.png, src/player.cpp,
	src/player.h, src/being.cpp, src/being.h, data/items.xml: Added scythe
	as a permanent weapon (ID: 623)

2006-11-04  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* data/maps/new_1-1.tmx.gz, data/maps/new_10-1.tmx.gz,
	data/maps/new_11-1.tmx.gz, data/maps/new_14-1.tmx.gz,
	data/maps/new_15-1.tmx.gz, data/maps/new_16-1.tmx.gz,
	data/maps/new_3-1.tmx.gz, data/maps/new_7-1.tmx.gz,
	data/maps/new_9-1.tmx.gz: Reverted Halloween map versions, except for
	map 10 and 11 which include the latest fixes by Crush but now have
	their night layer removed.

2006-11-04  Philipp Sehmisch  <tmw@crushnet.org>

	* data/maps/new_17-1.tmx.gz, 
	data/graphics/images/minimap_new_17-1.png,
	data/graphics/images/Makefile.am,
	data/graphics/images/CMakeLists.txt:
	Added music and minimap to woodland cave level 2.
	* data/maps/new_10-1.tmx.gz, maps/new_11-1.tmx.gz:
	Fixed some map bugs (please update server sided walkmap)

2006-11-03  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* src/gui/updatewindow.cpp, src/main.cpp: Updated to the new default
	updatehost.

2006-11-01  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* src/gui/gui.cpp, src/gui/browserbox.cpp,
	data/graphics/gui/rpgfont_wider.png,
	data/graphics/gui/browserfont.png, data/graphics/gui/fixedfont.png:
	Added support for å and Å (with help of Håkan Rönn).

2006-10-31  Philipp Sehmisch  <tmw@crushnet.org>

	* data/graphics/tiles/desert1.png, data/graphics/tiles/desert_x2.png:
	Adding a bunch of graphical improvements made by VxD.
