@@ -26,14 +26,12 @@
 #include <guichan/widgets/label.hpp>
 
 #include "button.h"
-#include "listbox.h"
 #include "scrollarea.h"
 #include "shop.h"
 #include "slider.h"
 
 #include "../npc.h"
 
-#include "../resources/iteminfo.h"
 #include "../resources/itemmanager.h"
 
 #include "../net/messageout.h"
@@ -48,8 +46,8 @@ BuyDialog::BuyDialog(Network *network):
 {
     mShopItems = new ShopItems;
 
-    mItemList = new ListBox(mShopItems);
-    mScrollArea = new ScrollArea(mItemList);
+    mShopItemList = new ShopListBox(mShopItems, mShopItems);
+    mScrollArea = new ScrollArea(mShopItemList);
     mSlider = new Slider(1.0);
     mQuantityLabel = new gcn::Label("0");
     mMoneyLabel = new gcn::Label("Price : 0 GP / 0 GP");
@@ -63,7 +61,7 @@ BuyDialog::BuyDialog(Network *network):
     setContentSize(260, 210);
     mScrollArea->setHorizontalScrollPolicy(gcn::ScrollArea::SHOW_NEVER);
     mScrollArea->setDimension(gcn::Rectangle(5, 5, 250, 110));
-    mItemList->setDimension(gcn::Rectangle(5, 5, 238, 110));
+    mShopItemList->setDimension(gcn::Rectangle(5, 5, 238, 110));
 
     mSlider->setDimension(gcn::Rectangle(5, 120, 200, 10));
     mSlider->setEnabled(false);
@@ -87,11 +85,11 @@ BuyDialog::BuyDialog(Network *network):
     mItemEffectLabel->setDimension(gcn::Rectangle(5, 150, 240, 14));
     mItemDescLabel->setDimension(gcn::Rectangle(5, 169, 240, 14));
 
-    mItemList->setEventId("item");
+    mShopItemList->setEventId("item");
     mSlider->setEventId("slider");
 
-    mItemList->addActionListener(this);
-    mItemList->addSelectionListener(this);
+    mShopItemList->addActionListener(this);
+    mShopItemList->addSelectionListener(this);
     mSlider->addActionListener(this);
 
     add(mScrollArea);
@@ -116,6 +114,7 @@ BuyDialog::~BuyDialog()
 void BuyDialog::setMoney(int amount)
 {
     mMoney = amount;
+    mShopItemList->setPlayersMoney(amount);
     mMoneyLabel->setCaption("Price : 0 GP / " + toString(mMoney)  + " GP");
     mMoneyLabel->adjustSize();
 }
@@ -128,7 +127,7 @@ void BuyDialog::reset()
     mAmountItems = 0;
 
     // Reset Previous Selected Items to prevent failing asserts
-    mItemList->setSelected(-1);
+    mShopItemList->setSelected(-1);
     mIncreaseButton->setEnabled(false);
     mDecreaseButton->setEnabled(false);
     mQuantityLabel->setCaption("0");
@@ -141,20 +140,13 @@ void BuyDialog::reset()
 
 void BuyDialog::addItem(short id, int price)
 {
-    ITEM_SHOP item_shop;
-
-    item_shop.name = itemDb->getItemInfo(id).getName() + " "
-        + toString(price) + " GP";
-    item_shop.price = price;
-    item_shop.id = id;
-
-    mShopItems->push_back(item_shop);
-    mItemList->adjustSize();
+    mShopItems->addItem(id, price);
+    mShopItemList->adjustSize();
 }
 
 void BuyDialog::action(const std::string& eventId, gcn::Widget* widget)
 {
-    int selectedItem = mItemList->getSelected();
+    int selectedItem = mShopItemList->getSelected();
 
     if (eventId == "item")
     {
@@ -172,7 +164,7 @@ void BuyDialog::action(const std::string& eventId, gcn::Widget* widget)
 
         // If no item was selected, none can be bought, otherwise
         // calculate how many the player can afford
-        mMaxItems = (mItemList->getSelected() == -1) ? 0 :
+        mMaxItems = (mShopItemList->getSelected() == -1) ? 0 :
             mMoney / mShopItems->at(selectedItem).price;
 
         // When at least one item can be bought, enable the slider and the
@@ -187,7 +179,7 @@ void BuyDialog::action(const std::string& eventId, gcn::Widget* widget)
     }
 
     // The following actions require a valid selection
-    if (selectedItem < 0 || selectedItem >= int(mShopItems->size()))
+    if (selectedItem < 0 || selectedItem >= int(mShopItems->getNumberOfElements()))
     {
         return;
     }
@@ -270,7 +262,7 @@ void BuyDialog::action(const std::string& eventId, gcn::Widget* widget)
 
 void BuyDialog::selectionChanged(const SelectionEvent &event)
 {
-    int selectedItem = mItemList->getSelected();
+    int selectedItem = mShopItemList->getSelected();
 
     if (selectedItem > -1)
     {
